# xnec2c

./: .gitignore  Makefile.am  configure.ac  xnec2c.nix
.github/workflows/: build-release.yml
doc/: opt_file_format.txt  xnec2c.1.in  xnec2c.html
examples/: 10-20m-moxon.nec  10-30m_MultiBand_Vertical.nec  10-30m_bipyramid.nec  10-30m_inv_cone.nec  10-40m_windom.nec  10-80m_Classic_Windom-optimized.nec  10-80m_G5RV.nec  10-80m_Inverted-L.nec  10-80m_windom.nec  137MHz_broadside_Yagi.nec  1MHz_3x_helicone.nec  1MHz_3x_helisphere.nec  1MHz_4x_helisphere.nec  1MHz_helivert.nec  1MHz_tower.nec  20-40m_vert_circ_cliff.nec  20-40m_vert_linear_cliff.nec  20m_dipole_NT_50ohm.nec  2m-5el-rhcp-ARISS-KJ7NLL.nec  2m_1to4l-gp_on_pole.nec  2m_1to4l-horiz_gp_on_pole.nec  2m_5to8l-gp_on_pole.nec  2m_EME_ant.nec  2m_extended_yagi-optimized.nec  2m_extended_yagi.nec  2m_sqr_halo_stack.nec  40-80m_Inv_L.nec  40m-moxon.nec  5el_yagi_SY_parametric.opt  5el_yagi_SY_parametric.sy  6-17m_bipyramid.nec  6-20m_fan.nec  6-20m_inv_cone.nec  6-40m_5B4AZ-optimized.nec  6-40m_Classic_Windom-optimized.nec  6m_big-square_stack.nec  6m_bigwheel-stack.nec  70cm-5el-rhcp-KJ7NLL.nec  80m_zepp.nec  ex2_current_slope_disc_dipole.nec  (+1 more)
opengl-demo/: demo_main.c  demo_scene_cylinder.c  demo_scene_cylinder.h  demo_scene_lines.c  demo_scene_lines.h  demo_scene_triangle.c  demo_scene_triangle.h  demo_stubs.c
po/: LINGUAS  POTFILES.in  af.po  ar.po  bg.po  bn.po  bs.po  cs.po  da.po  de.po  el.po  es.po  et.po  fa.po  fi.po  fr.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  ky.po  lt.po  lv.po  mk.po  ms.po  nl.po  no.po  pl.po  ps.po  pt.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  (+9 more)
po/prompt/: frame.md  pass.md  phases.md
po/rules/: af.md  ar.md  bg.md  bn.md  bs.md  cs.md  da.md  de.md  el.md  es.md  et.md  fa.md  fi.md  fr.md  he.md  hi.md  hr.md  hu.md  id.md  it.md  ja.md  ko.md  ky.md  lt.md  lv.md  mk.md  ms.md  nl.md  no.md  pl.md  ps.md  pt.md  ro.md  ru.md  sk.md  sl.md  sr.md  sv.md  ta.md  th.md  (+7 more)
resources/: animate.glade  freqplots_widths.ini  opengl_settings.glade  sy_overrides.glade  themes.ini  xnec2c.glade  xnec2c.gresource.xml
resources/gl/: color-fragment.glsl  color-vertex.glsl  ground-plane-fragment.glsl  ground-plane-vertex.glsl  lit-color-fragment.glsl  lit-color-vertex.glsl  peel-composite-fragment.glsl  peel-composite-vertex.glsl  text-fragment.glsl  text-vertex.glsl
resources/settings/: cairo_settings.glade  opengl_settings.glade  render_settings.glade
scripts/: plot-historical-noise-models.py  plot-noise-models.py  trans-check.sh  trans-classify.awk  trans-delta.sh  trans-update.sh  trans-validate-1.sh  trans-validate.sh
scripts/githooks/: pre-commit  pre-push
scripts/packaging/: build-deb.sh  build-rpm.sh
src/: Makefile.am  branch_hints.h  calculations.c  callback_func.c  callbacks.c  callbacks.h  cmnd_edit.c  common.h  config_hooks.c  config_hooks.h  console.c  console.h  draw.c  draw.h  draw_radiation.c  draw_radiation.h  draw_structure.c  expr_edit.h  fields.c  fork.c  fork.h  gdk_scroll.c  gdk_scroll.h  geometry.c  gnuplot.c  ground.c  input.c  input.h  interface.c  interface.h  location.h  main.c  main.h  mathlib.c  matrix.c  measurements.c  measurements.h  mem.c  mem.h  mem_track.h  (+51 more)
src/cairo/: cairo_axes.c  cairo_draw.h  cairo_farfield.c  cairo_frame.c  cairo_frame.h  cairo_nearfield.c  cairo_project.c  cairo_scenebuffer.c  cairo_scenebuffer.h  cairo_scenebuffer_flush.c  cairo_structure.c
src/chroma/: chroma.c  chroma.h  chroma_glyph.c  chroma_glyph.h  chroma_nearfield.c  chroma_nearfield.h  chroma_source.c  chroma_source.h
src/color/: color_edge.h  color_palette.c  color_palette.h  color_ramp.c  color_ramp.h  color_srgb.h  color_tone.c  color_tone.h
src/config/: config_widget.c  config_widget.h
src/freqplots/: freqplots_core.c  freqplots_graph.c  freqplots_input.c  freqplots_internal.h  freqplots_locus.c  freqplots_locus.h  freqplots_render.c  freqplots_render.h  freqplots_scale.c  freqplots_theme_menu.c  freqplots_xy.c
src/mem/: mem.c  mem.h  mem_track.c  mem_track.h
src/opengl/: opengl_msaa.c  opengl_msaa.h  opengl_ops.c  opengl_rdpattern.c  opengl_rdpattern.h  opengl_rdpattern_geometry.c  opengl_rdpattern_geometry.h  opengl_settings.c  opengl_settings.h  opengl_state.c  opengl_state.h  opengl_structure.c  opengl_structure.h  opengl_structure_geometry.c  opengl_structure_geometry.h
src/opengl-engine/: opengl_arcball.c  opengl_arcball.h  opengl_axes.c  opengl_axes.h  opengl_cairo_overlay.c  opengl_cairo_overlay.h  opengl_cylinder.c  opengl_cylinder.h  opengl_gradient_overlay.c  opengl_gradient_overlay.h  opengl_ground_plane.c  opengl_ground_plane.h  opengl_math.h  opengl_renderer.c  opengl_renderer.h  opengl_view.c  opengl_view.h  opengl_view_input.c  opengl_view_input.h  opengl_view_msaa.c  opengl_view_msaa.h  opengl_view_notice.c  opengl_view_notice.h  opengl_view_overlay.c  opengl_view_overlay.h  opengl_view_peel.c  opengl_view_peel.h  opengl_view_render.c  opengl_view_render.h  opengl_view_scene.c  opengl_view_scene.h  opengl_view_tooltip.c  opengl_view_tooltip.h
src/optimizers/: opt_fitness.c  opt_fitness.h  opt_nec2_eval.c  opt_session.c  opt_session.h  opt_simple.c  opt_simple_engine.c  opt_simple_internal.h  opt_simple_var.c  optimizer.c  particleswarm.c  particleswarm.h  simplex.c
src/prerender/: prerender_aggregate.c  prerender_aggregate.h  prerender_color.c  prerender_color.h  prerender_color_proj.c  prerender_color_proj.h  prerender_farfield.c  prerender_farfield.h  prerender_nearfield.c  prerender_nearfield.h  prerender_patch_arrow.c  prerender_patch_arrow.h  prerender_rdpattern.c  prerender_rdpattern.h  prerender_state.c  prerender_state.h  presentation_cache_key.c  presentation_cache_key.h
src/render/: gradient_cache.c  gradient_cache.h  render_dispatch.c  render_dispatch.h  render_message.c  render_message.h
src/settings/: render_settings.c  render_settings.h  render_settings_cairo.c  render_settings_common.c  render_settings_common.h  render_settings_dispatch.c  (+4 more)
t/: Makefile.am  mem_array_void_test.sh
(+21 files in other folders)
